<resources>
    <string name="app_name">FinalProject1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">TEST</string>
    <string name="test2">test2</string>
    <string name="juice">JUICE</string>
    <string name="coffee_tea"><![CDATA[COFFEE & TEA]]></string>
    <string name="juice_page">JUICE PAGE</string>
    <string name="name">Name</string>
    <string name="description">Description</string>


    <string-array name="fruit_listName">
        <item>Apple juice</item>
        <item>Watermelon juice</item>
        <item>Carrot juice</item>
        <item>Mango juice</item>
    </string-array>

    <string-array name="fruit_listDesc">
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
        <item>This is random description.</item>
    </string-array>


    <string name="search_your_recipes">Search Your Recipes…</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">...</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="youtube">YOUTUBE</string>
    <string name="source">SOURCE</string>
    <string name="favorite">Favorite</string>
    <string name="juiceText">Healthy fruit juice recipes with step by step instructions. It contains great selections of juice recipes that will surely satisfy your palate with flavourful ingredients. These recipes are quick to prepare!</string>
    <string name="coffeeText">It brings you a great selection of delicious coffee and tea recipes. Just a simply tap on the photo, you will surely find here a coffee and tea recipe that will suit your taste. Make your own favourite coffee or tea now!</string>
    <string name="about">About</string>
    <string name="fruit_juice_recipes">Fruit Juice Recipes</string>
    <string name="coffee_and_tea_recipes">Coffee And Tea Recipes</string>
    <string name="videos_you_might_like">Videos You Might Like...</string>
    <string name="home_cooking_lifestyle_healthy_apple_juice">Home Cooking Lifestyle | Healthy Apple Juice</string>
    <string name="enhance_recipe_tea_recipe_with_coffee">ENHANCE RECIPE | Tea recipe with coffee</string>
    <string name="textview">TextView</string>
</resources>