<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".juiceContent">




    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/juice_content_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

            </LinearLayout>

            <TextView
                android:id="@+id/juice_content_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#F1EAEA"
                android:fontFamily="serif"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp"
                android:text="@string/textview"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/category"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/juice_content_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="@string/dot_loading"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/Country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/country"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/juice_content_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="14dp"
                            android:paddingTop="5dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:text="@string/dot_loading"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/instructions"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/juice_content_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:paddingTop="15dp"
                    android:paddingRight="14dp"
                    android:paddingBottom="15dp"
                    android:text="@string/dot_loading"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:text="@string/Ingredients"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/juice_content_ingredient"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/juice_content_measure"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingRight="14dp"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#FFE1E1"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/youtube"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="10dp"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:padding="14dp"
                        android:text="@string/youtube"
                        android:textColor="#EC2D2D"
                        android:textSize="16sp" />
                    //android:drawableLeft="@drawable/ic_play"
                    //android:drawableStart="@drawable/ic_play" */

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>